css/record.css
.days {
    margin: 0 1em;
    padding-bottom: 1.5em;
    font-size: 1.1em;
    position: relative;
}
.tooltip {
    visibility: hidden;
    position: absolute; bottom: 0; left: 0; right: 0;
    color: #555; font-family: sans-serif; font-size: 1.5em;
    text-align: center;
    line-height: 1em;
}


/*
 * Flexbox settings
 */
.days {
    display: -webkit-box; -webkit-box-wrap: wrap;
    display: -moz-box; -moz-box-wrap: wrap;
    display: -ms-flexbox; -ms-flexbox-wrap: wrap;
    display: -webkit-flex; -webkit-flex-wrap: wrap;
    display: flex; flex-wrap: wrap;
}
.day,
.day-name,
.placeholder {
    border-style: solid; border-width: 1px; border-color: #ccc;
    box-sizing: border-box; height: 1em; width: 1em; line-height: 1em;
    margin-left: -1px; margin-top: -1px;
}
.weekly .days {
    height: 7em;
    margin-bottom: -7px;
    -webkit-box-direction: column; -webkit-align-content: flex-start;
    -moz-box-direction: column; -moz-align-content: flex-start;
    -ms-flexbox-direction: column; -ms-align-content: flex-start;
    -webkit-flex-direction: column; -webkit-align-content: flex-start;
    flex-direction: column; align-content: flex-start;
}
.vertical .days {
    width: 7em;
}

/*
 * Date block user interaction
 */
.day:hover { background-color: #eee; }
.day:hover .tooltip { visibility: visible; }
.day.set { background-color: #a0d020; }
.day.set:hover { background-color: #b0e030; }

/*
 * Day of week & placeholder blocks, used in weekly/github-like views
 */
.day-name div { color: #555; font-family: sans-serif; font-size: 0.8em; }
.day-name,
.placeholder {
    border-color: rgba(0,0,0,0);
    display: none;  /* Hide blocks unless using weekly view */
}
.weekly .placeholder,
.weekly .day-name,
.vertical .placeholder,
.vertical .day-name {
    display: block;
}

/*
 * Record header bar
 */
.record>header { clear: both; margin-bottom: 1em; }
.record-link { font-size: 1.1em; }
.record form { font-size: 0.9em; }
.record form h1 { display: inline-block; }

/*
 * Streaks
 */
.streak-info {
    color: #555; font-family: sans-serif;
    text-align: left;
    letter-spacing: 1em;
    margin: 0 1em;
    float:left;
}
.streak {
    display: block;
    font-size: 0.75em;
    letter-spacing: normal;
    text-align: center;
}
.streak+.streak {
    margin-top: 1em;
}
.streak-length {
    font-size: 1.33em;
    margin-top: 0.25em; margin-bottom: 0.25em;
}
/* Clearfix streak-info containers */
.record:after {
  content: "";
  display: table;
  clear: both;
}

/*
 * Un-highlightable text
 */
.day-name div,
.tooltip {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default;
}

/*
 * Horizontal weekly view
 */
.weekly .day-name { width: 1.5em; }

/*
 * Vertical view
.vertical { background-color:#f8f8f8; width:14em; padding:0.5em; }
 */
.vertical header { text-align: center; }
.vertical .day:hover { background-color:#d8d8d8; }
.vertical .day.set:hover { background-color: #b0e030; }
.vertical .record-link { display:block; }
.vertical .day-name { height: 1.5em; text-align: center; }
.vertical .days { font-size: 1.25em; margin: auto; }
.vertical .streak-info { float: none; margin: 0 0 1em 0; }
.vertical .streak { display: inline-block; margin: 0; }
#record_list {
    /*
    -webkit-column-count:3; -moz-column-count:3; column-count:3;
    */
    -webkit-column-width:11em; -moz-column-width:11em; column-width:11em;
    -webkit-column-gap:1em; -moz-column-gap:1em; column-gap:1em;
    margin-top:1em;
    text-align:center;
}
.record { text-align:left; }
.weekly,.plain {}

